# agentic_hackathon

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 926a6602cc5c_create_core_schema.py
apps/api/app/: main.py
apps/api/app/api/: dependencies.py
apps/api/app/api/routes/: attachments.py  auth.py  blocks.py  dms.py  friends.py  health.py  messages.py  presence.py  realtime.py  rooms.py
apps/api/app/attachments/: __init__.py  service.py
apps/api/app/auth/: __init__.py  security.py  service.py
apps/api/app/blocks/: __init__.py  service.py
apps/api/app/cache/: __init__.py  redis.py
apps/api/app/core/: config.py  lifespan.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/demo/: __init__.py  service.py
apps/api/app/dms/: service.py
apps/api/app/friends/: service.py
apps/api/app/messages/: service.py
apps/api/app/presence/: service.py
apps/api/app/realtime/: manager.py
apps/api/app/rooms/: __init__.py  service.py
apps/api/app/services/: mail.py
apps/api/scripts/: measure_local_performance.py  seed_demo_data.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth.py  test_blocks.py  test_demo_seed.py  test_dms.py  test_friends.py  test_health.py  test_messages.py  test_presence_api.py  test_realtime.py  test_rooms.py
apps/api/tests/unit/: test_auth_security.py  test_config.py  test_presence.py  test_schema.py
docs/: architecture.md  (+6 more)
(+72 files in other folders)
