[project]
name = "agentic-chat-api"
version = "0.1.0"
description = "Backend API for the Agentic Hackathon chat platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2.0",
    "fastapi>=0.116,<1.0",
    "pydantic-settings>=2.10,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "redis>=6.0,<7.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
